Change file html, css, js name to snake_case

--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -60,8 +60,8 @@
                 <div class="dropdown-menu dropdown-menu-right username-dropdown">
                     <a href="{% url 'user_profile' user.id %}" class="dropdown-item" type="button">Thông tin tài khoản</a>
                     {% if user.role == "owner" %}
-                    <a href="#" class="dropdown-item" type="button">Sân bóng của tôi</a>
-                    <a href="" class="dropdown-item" type="button">Trạng thái đặt sân</a>
+                    <a href="{% url 'stadium_detail' fields.first.id %}" class="dropdown-item" type="button">Sân bóng của tôi</a>
+                    <a href="{% url 'owner' fields.first.id %}" class="dropdown-item" type="button">Trạng thái đặt sân</a>
                     {% else %}
                     <a href="{% url 'history_booked' user.id %}" class="dropdown-item" type="button">Lịch sử đặt sân</a>
                     {% endif %}
