--- a/stadium/book_stadium/templates/book_stadium/notification_detail.html
+++ b/stadium/book_stadium/templates/book_stadium/notification_detail.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/notificationDetail.css' %}">
+    <link rel="stylesheet" href="{% static 'css/notification_detail.css' %}">
 {% endblock %}
 
 {% block content %}
