--- a/stadium/book_stadium/templates/book_stadium/search_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/search_stadium.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/book_stadium.css' %}">
-    <link rel="stylesheet" href="{% static 'css/searchStadium.css' %}">
+    <link rel="stylesheet" href="{% static 'css/search_stadium.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -228,6 +228,6 @@
 {% endblock %}
 
 {% block javascript %}
-    <script src="{% static 'js/searchStadium.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/search_stadium.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/bookStadium.js' %}" type="text/javascript"></script>
 {% endblock %}
