--- a/stadium/book_stadium/templates/book_stadium/stadium_owner_profit.html
+++ b/stadium/book_stadium/templates/book_stadium/stadium_owner_profit.html
@@ -1,7 +1,7 @@
 {% extends 'book_stadium/base.html' %}
 {% load static %}
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/stadiumOwnerProfit.css' %}">
+    <link rel="stylesheet" href="{% static 'css/stadium_owner_profit.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -9,5 +9,5 @@
 {% endblock %}
 
 {% block javascript %}
-    <script src="{% static 'js/stadiumOwnerProfit.js' %}"></script>
+    <script src="{% static 'js/stadium_owner_profit.js' %}"></script>
 {% endblock %}
