--- a/stadium/book_stadium/templates/book_stadium/user_profile.html
+++ b/stadium/book_stadium/templates/book_stadium/user_profile.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/userProfile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user_profile.css' %}">
 {% endblock %}
 
 {% block content %}
