--- a/stadium/book_stadium/templates/password_reset/password_change.html
+++ b/stadium/book_stadium/templates/password_reset/password_change.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/passwordChange.css' %}">
+    <link rel="stylesheet" href="{% static 'css/password_change.css' %}">
 {% endblock %}
 
 {% block content %}
