--- a/stadium/book_stadium/templates/book_stadium/book_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/book_stadium.html
@@ -237,5 +237,5 @@
     </div>
 {% endblock %}
 {% block javascript %}
-    <script src="{% static 'js/bookStadium.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/book_stadium.js' %}" type="text/javascript"></script>
 {% endblock %}
