--- a/stadium/book_stadium/templates/book_stadium/history_booked_of_user.html
+++ b/stadium/book_stadium/templates/book_stadium/history_booked_of_user.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block css %}
-    <link rel="stylesheet" href="{% static  'css/historyBookedOfUser.css' %}">
+    <link rel="stylesheet" href="{% static  'css/history_booked_of_user.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -116,5 +116,5 @@
 {% endblock %}
 
 {% block javascript %}
-    <script src="{% static 'js/historyBookedOfUser.js'%}" type="text/javascript"></script>
+    <script src="{% static 'js/history_booked_of_user.js'%}" type="text/javascript"></script>
 {% endblock %}
