--- a/stadium/book_stadium/templates/book_stadium/owner_profit.html
+++ b/stadium/book_stadium/templates/book_stadium/owner_profit.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 {% load static %}
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/ownerProfit.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owner_profit.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -33,5 +33,5 @@
 
 {% block javascript %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
-    <script src="{% static 'js/ownerProfit.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/owner_profit.js' %}" type="text/javascript"></script>
 {% endblock %}
