--- a/stadium/book_stadium/templates/book_stadium/book_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/book_stadium.html
@@ -111,7 +111,7 @@
                     </div>
                 {% endfor %}
 
-                <div class="pagination">
+                <div class="pagination mt-5">
                     <div class="number-of-page">
                         {% if page_obj.has_previous %}
                         <a class="btn btn-outline-info mb-4" href="?page=1" >Trang đầu</a>
