--- a/stadium/static/css/base.css
+++ b/stadium/static/css/base.css
@@ -16,9 +16,13 @@ body {
     margin: auto;
 }
 
-.navbar img {
+.navbar a.logo {
     width: 60px;
     margin-left: 5%;
+}
+
+.navbar a.logo img {
+    width: 100%;
 }
 
 .navbar {
@@ -35,6 +39,7 @@ body {
     display: flex;
     align-items: center;
     margin-right: 5%;
+    margin-bottom: 0;
 }
 
 .navbar ul li {
@@ -137,7 +142,7 @@ section {
 .sidebar ul li a span {
     position: absolute;
     top: 50%;
-    right: 0;
+    right: 5%;
     transform: translateY(-50%);
     transition: transform 0.5s;
 }
