Fix REVIEW25052021 and check if have same issues in other view

--- a/stadium/book_stadium/templates/book_stadium/history_booked_of_user.html
+++ b/stadium/book_stadium/templates/book_stadium/history_booked_of_user.html
@@ -21,7 +21,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                        {% for order in all_orders_of_user %}
+                        {% for order in orders_of_user %}
                       <tr>
                         <td scope="row">{{ order.ngay }}</td>
 
