--- a/stadium/book_stadium/templates/book_stadium/notification_detail.html
+++ b/stadium/book_stadium/templates/book_stadium/notification_detail.html
@@ -8,8 +8,8 @@
 
 {% block content %}
 
-        <p>{{ notify.verb }}</p>
-        <p>{{ notify.description }}</p>
+        <p>{{ notification.verb }}</p>
+        <p>{{ notification.description }}</p>
 
 {% endblock %}
 
