--- a/stadium/book_stadium/templates/book_stadium/owner.html
+++ b/stadium/book_stadium/templates/book_stadium/owner.html
@@ -18,7 +18,7 @@
         {% endif %}
     {% endfor %}
 
-    {% for orders in all_orders %}
+    {% for orders in orders_of_stadium %}
         <!-- It is {% now "D d M Y" %} -->
 
         <div class="stadium-infor">
