--- a/stadium/static/css/stadium_detail.css
+++ b/stadium/static/css/stadium_detail.css
@@ -77,14 +77,17 @@ h1 {
 }
 
 .comments-section {
-    width: 70%;
+    width: 80%;
     margin: auto;
     margin-bottom: 20%;
+    border: 2px solid black;
 }
 
 .all-comments {
     width: 80%;
-    margin: auto;
+    margin: 5% 11%;
+    padding: 3%;
+    background: #e4e3e3;
 }
 
 .timeframe-state input {
@@ -114,6 +117,9 @@ h1 {
 .average-users-rating {
     width: 80%;
     margin: auto;
-    margin-bottom: 10%;
     text-align: center;
+}
+.rating-title,
+.notification-title {
+    padding: 2%;
 }
